--- a/flutter_keyboard_visibility/pubspec.yaml
+++ b/flutter_keyboard_visibility/pubspec.yaml
@@ -13,7 +13,11 @@ dependencies:
   flutter_keyboard_visibility_platform_interface: ^2.0.0
   flutter_keyboard_visibility_linux: ^1.0.0
   flutter_keyboard_visibility_macos: ^1.0.0
-  flutter_keyboard_visibility_web: ^2.0.0
+  flutter_keyboard_visibility_web:
+    git:
+      url: https://github.com/abdulhaq-e/flutter_keyboard_visibility.git
+      ref: master
+      path: flutter_keyboard_visibility_web
   flutter_keyboard_visibility_windows: ^1.0.0
   flutter:
     sdk: flutter
